[package]
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>"]
name = "chip8-web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"]}
chip8 = { path = "../../chip8" }

wasm-bindgen = "0.2.67"

console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'GainNode',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'KeyboardEvent',
  'Node',
  'OscillatorNode',
  'OscillatorType',
  'Window',
]

[features]
default = ["console_error_panic_hook"]
